feat: enable sorting for exhaustive method and list variables